# pacemaker-cloud

./: .gitignore  Makefile.am  NEWS  README  README.markdown  TODO  autogen.sh  configure.ac  cpe-rest  pacemaker-cloud.spec.in
init/: Makefile.am  pcloud-cape-sshd@.service  pcloud-cped.service  pcloud-dped@.service  pcloud-qpidd.service  pcloud-vmlauncher.service  pcmkc-cped.service  pcmkc-dped.conf  pcmkc-dped@.service  pcmkc-qpidd.service  pcmkc-vmlauncher.service
man/: Makefile.am  cped.1  dped.1  pacemaker_cloud_example.8  pacemaker_cloud_overview.8  pcloudsh.1  vmlauncher.1
src/: .gitignore  Makefile.am  agent.cpp  agent.h  assembly.cpp  assembly.h  assembly_am.cpp  assembly_am.h  assembly_pm.c  assembly_pm.cpp  assembly_pm.h  cape.c  cape.h  capeadmin.c  caped.c  cf2pe.xsl  cim_service.c  cim_service.h  common_agent.cpp  common_agent.h  config_loader.cpp  config_loader.h  cpe-tool2.c  cpe_agent.cpp  cpe_agent.h  cpe_agent_register.cpp  cpe_httpd.cpp  cpe_httpd.h  cpe_impl.cpp  cpe_impl.h  cped2.py  deltacloud.c  deployable.cpp  deployable.h  deployable_agent.cpp  deployable_agent.h  dpe.cpp  dpe.h  dpe_agent.cpp  dpe_agent.h  (+39 more)
src/pcloudsh/: .gitignore  F14-x86_64-jeos-assembly.tdl  F14-x86_64-jeos.tdl  F15-x86_64-jeos-assembly.tdl  F15-x86_64-jeos.tdl  F16-x86_64-jeos-assembly.tdl  F16-x86_64-jeos.tdl  Makefile.am  U10-x86_64-jeos-assembly.tdl  U10-x86_64-jeos.tdl  assembly.py  assembly_factory.py  assy-wordpress-F16.tdl  assy-wordpress-mysql-F16.tdl  assy1-F14.tdl  assy1-F15.tdl  assy1-F16.tdl  assy1-U10.tdl  cpe.py  db_helper.py  deployable.py  deployable_factory.py  eventreceiver.py  eventrunner.py  ifconfig.py  jeos.py  libvirt_assembly.py  libvirt_deployable.py  openstack_assembly.py  openstack_deployable.py  pcloudsh  pcloudsh.py  pcmkconfig.py.in  resource.py  rhel61-x86_64-jeos-assembly.tdl  rhel61-x86_64-jeos.tdl  vmlauncher  vmlauncher.py
src/pcloudsh/keys/: README
src/pcloudsh/resource_templates/: aeolus-conductor.xml  apache2.xml  condor.xml  conductor-dbomatic.xml  conductor-delayed_job.xml  deltacloud-core.xml  deltacloud-ec2-us-east-1.xml  deltacloud-ec2-us-west-1.xml  deltacloud-mock.xml  dummy.xml  httpd.xml  imagefactory.xml  mysql.xml  mysqld.xml  ntpd.xml  postgresql.xml  qpidd.xml
tests/: .gitignore  Makefile.am  assembly.py  basic.sh  check_basic.c  check_escalation.c  check_reconfig.c  check_recover.c  deployable.py  manufacturer.py  process_monitor.py  run.py  runner.sh  sim_deltacloud_dummy.c  sim_deltacloud_master.c  sim_recovery.c  t_F14_x86_64_1.tdl  t_F15_x86_64_1.tdl  t_F16_x86_64_1.tdl
tests/conductor/: README  conductor.rb  config.ru  cpe-rest  run
tests/templates/: f14.ks  f14.tdl  ks  rhel6.ks  rhel6.tdl
